--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
    "dependencies": {
       "@material-ui/core": "^4.11.3",
       "@material-ui/icons": "^4.11.2",
+      "axios": "^0.21.1",
       "babel-jest": "^26.6.3",
       "qs": "^6.10.1",
       "react": "^17.0.2",
@@ -13,7 +14,10 @@
       "react-responsive-carousel": "^3.2.18",
       "react-router-dom": "^5.2.0",
       "react-scripts": "4.0.3",
+      "redux-logger": "^3.0.6",
       "redux-persist": "^6.0.0",
+      "redux-promise": "^0.6.0",
+      "redux-thunk": "^2.3.0",
       "styled-components": "^5.2.3"
    },
    "scripts": {
