--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
       "babel-jest": "^26.6.3",
       "qs": "^6.10.1",
       "react": "^17.0.2",
+      "react-daum-postcode": "^2.0.6",
       "react-dom": "^17.0.2",
       "react-number-format": "^4.5.5",
       "react-redux": "^7.2.3",
