--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
       "react-responsive-carousel": "^3.2.18",
       "react-router-dom": "^5.2.0",
       "react-scripts": "4.0.3",
+      "recharts": "^2.0.9",
       "redux-logger": "^3.0.6",
       "redux-persist": "^6.0.0",
       "redux-promise": "^0.6.0",
