--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
       "@material-ui/icons": "^4.11.2",
       "axios": "^0.21.1",
       "babel-jest": "^26.6.3",
+      "dotenv": "^8.2.0",
+      "npm": "^7.11.1",
       "qs": "^6.10.1",
       "react": "^17.0.2",
       "react-dom": "^17.0.2",
