--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
    },
    "scripts": {
       "start": "react-scripts start",
-      "build": "react-scripts build",
+      "build": "node --max_old_space_size=8192 react-scripts build",
       "eject": "react-scripts eject"
    },
    "eslintConfig": {
