--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
       "axios": "^0.21.1",
       "babel-jest": "^26.6.3",
       "dotenv": "^8.2.0",
+      "http-proxy-middleware": "^2.0.0",
       "npm": "^7.11.1",
       "qs": "^6.10.1",
       "react": "^17.0.2",
