--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
       "babel-jest": "^26.6.3",
       "dotenv": "^8.2.0",
       "http-proxy-middleware": "^2.0.0",
+      "install": "^0.13.0",
       "npm": "^7.11.1",
       "qs": "^6.10.1",
       "react": "^17.0.2",
       "react-daum-postcode": "^2.0.6",
       "react-dom": "^17.0.2",
+      "react-iamport": "0.0.2",
       "react-number-format": "^4.5.5",
       "react-redux": "^7.2.3",
       "react-responsive-carousel": "^3.2.18",
